# p2p-qwen

./: # 以管理员身份运行 PowerShell  # 以管理员身份运行 PowerShell.pub  .gitignore  CMakeLists.txt  Yy306050  Yy306050.pub  main.cpp
src/: main.cpp
src/core/: ChunkManager.cpp  ChunkManager.h  Encryption.cpp  Encryption.h  FileHandler.cpp  FileHandler.h
src/network/: DataTransfer.cpp  DataTransfer.h  P2PManager.cpp  P2PManager.h  TCPConnection.cpp  TCPConnection.h  UDPHolePunching.cpp  UDPHolePunching.h
src/ui/: MainWindow.cpp  MainWindow.h
src/utils/: Config.h  Logger.h
